--- a/index.html
+++ b/index.html
@@ -97,24 +97,47 @@
       </div>
     </div>
 
-         <!-- Slide 3 -->
-    <div class="carousel-item">
-      <div class="carousel-container">
-        <h2 class="animate__animated animate__fadeInDown">Dukungan Selama Magang</h2>
-        <p class="animate__animated animate__fadeInUp">Selama program magang, kamu akan mendapatkan dukungan penuh dari:
-          <br>
-          🔹 Dosen pembimbing yang berpengalaman
-          <br>
-          🔹 Mentor dari industri yang siap membagikan ilmu dan pengalaman
-          <br>
-          🔹 Sesi pelatihan dan workshop untuk meningkatkan keterampilan
-          <br>
-          🔹 Evaluasi berkala untuk memastikan perkembanganmu
-          <br>
-          Dengan dukungan ini, kamu akan lebih siap menghadapi tantangan di dunia kerja!</p>
-        <a href="#team" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
-      </div>
-    </div>
+<!-- Slide 3 -->
+<div class="carousel-item">
+  <div class="carousel-container">
+    <h2 class="animate__animated animate__fadeInDown">Kenapa Memilih Program Magang UBHI?</h2>
+    <p class="animate__animated animate__fadeInUp">
+      Program Magang UBHI dirancang untuk memberikan pengalaman terbaik bagi mahasiswa:
+      <br>
+      🔹 Kolaborasi dengan perusahaan terkemuka di berbagai bidang
+      <br>
+      🔹 Bimbingan langsung dari mentor profesional
+      <br>
+      🔹 Lingkungan kerja yang mendukung pengembangan diri
+      <br>
+      🔹 Kesempatan untuk bekerja pada proyek nyata
+      <br>
+      Jangan lewatkan kesempatan ini untuk memulai perjalanan kariermu!
+    </p>
+    <a href="#testimonials" class="btn-get-started animate__animated animate__fadeInUp scrollto">Lihat Testimoni</a>
+  </div>
+</div>
+
+<!-- Slide 4 -->
+<div class="carousel-item">
+  <div class="carousel-container">
+    <h2 class="animate__animated animate__fadeInDown">Dukungan dari Universitas</h2>
+    <p class="animate__animated animate__fadeInUp">
+      Universitas Bhineka PGRI Tulungagung berkomitmen untuk mendukung mahasiswa melalui:
+      <br>
+      🔹 Fasilitas lengkap untuk menunjang proses magang
+      <br>
+      🔹 Kerja sama dengan berbagai mitra industri
+      <br>
+      🔹 Program pelatihan sebelum magang untuk mempersiapkan mahasiswa
+      <br>
+      🔹 Sertifikat resmi setelah menyelesaikan program
+      <br>
+      Kami hadir untuk memastikan kesuksesanmu di dunia kerja!
+    </p>
+    <a href="#contact" class="btn-get-started animate__animated animate__fadeInUp scrollto">Hubungi Kami</a>
+  </div>
+</div>
 
         <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
           <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
